# h_drf

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210808_1438.py  0003_alter_creator_foundation_date.py
authentication/: admin.py  mails.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
games/: celerybeat-schedule  pytest.ini  settings.py  urls.py
games/api/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
games/api/management/commands/: creator_generator.py  games_generator.py
games/api/migrations/: 0001_initial.py  0002_alter_gamecategory_slug.py  0003_auto_20210906_2103.py
games/api/services/: crud_operations.py
games/api/tests/: test_models.py  test_urls.py  test_views.py
games/authentication/: admin.py  exceptions.py  models.py  tasks.py  urls.py  views.py
games/authentication/migrations/: 0002_user_is_reminder_notified.py
games/authentication/services/: mails.py  registration.py
games/authentication/templates/authentication/: activation-mail-template.html  remind-activation-mail-template.html
games/authentication/tests/: test_models.py  test_tasks.py  test_views.py
games/games/: celery.py  settings.py  urls.py
games/postgres-data/global/: 1260  1262  2671  pg_control
games/postgres-data/pg_stat/: global.stat
nginx/: Dockerfile  default.conf
(+7 files in other folders)
